# src-data-preparation-service

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
k8s_files/: client-pod.yaml  fastapi-service.yaml  local_storage_volume.yaml  prepare-data.yaml  user_areas_volume.yaml
src/src_data_preparation/: __init__.py  prepare_data_service.py
tests/example/: client.py  request.json  request_copy.json  request_symlink.json
tests/unit/: test_prepare_data_service.py
